--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -17,10 +17,6 @@
     @media (min-width: $min-desktop-width) {
         width: $min-desktop-width;
 
-        &--consultation {
-            width: 100%;
-        }
-
         &--workflow {
             padding-left: 20px;
             padding-right: 20px;
